[sc-7890] implement new widget options page (#1155)
* Remove `jest-preset-angular` dependency

`jest-preset-angular` is not used anymore and has a security vulnerability

* Fix sistema tabs style

* Fix widget so we can update the placeholder properly

The previous implementation didn't allow to update the placeholder after the Search bar widget was included in a page.

* [sc-7890] New widget generator page

  - New layout with two tabs on the left panel, widget preview on the right and code snippet as on overlay on the right
  - Categorization of the advanced form
  - update call to Svelte’s `$destroy` method

* cleanup

* Preset tab

* Update pastanaga

* Revert "Remove `jest-preset-angular` dependency"

This reverts commit 6fee159382bafe24c4dc4d9e3c69606ffcaa0a6e.

* Cleanup comments + increase style budget on nucliaDB admin

* Review comments

* [sc-7906] Update sidenav

- Widget generator out of KB settings
- Manage account in user menu

* don't display manage account option only if hasOwnAccount is true

We currently have a weird behavior in the e2e where hasOwnAccount is false even though welcome endpoint returns the right value. We will need to investigate further, but in the meantime using a simple if solve the e2e problem.

* Cleanup

--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -9,32 +9,38 @@
     (click)="goProfile()">
     {{ 'generic.user_preferences' | translate }}
   </pa-option>
-  <ng-container *ngIf="(isBillingEnabled | async) && (isAccountManager | async)">
+  @if ((isBillingEnabled | async) && (isAccountManager | async)) {
     <pa-separator></pa-separator>
     <pa-option
       icon="payment"
       (click)="goToBilling()">
       {{ 'account.billing' | translate }}
     </pa-option>
-  </ng-container>
-
-  <ng-container *ngIf="accounts.length > 1 || standalone">
+  }
+  @if (accounts.length > 1 || standalone) {
     <pa-separator></pa-separator>
     <pa-option
       icon="reload"
       (click)="switchAccount()">
       {{ 'generic.switch_account' | translate }}
     </pa-option>
-  </ng-container>
-
-  <ng-container *ngIf="(hasOwnAccount | async) === false">
+  }
+  @if ((hasOwnAccount | async) === false) {
     <pa-separator></pa-separator>
     <pa-option
       icon="account"
       (click)="createAccount()">
       {{ 'generic.create_account' | translate }}
     </pa-option>
-  </ng-container>
+  }
+  @if (!standalone) {
+    <pa-option
+      data-cy="go-to-manage-account"
+      icon="account"
+      (click)="goToManageAccount()">
+      {{ 'account.manage' | translate }}
+    </pa-option>
+  }
 
   <pa-separator></pa-separator>
   <pa-option
